--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SESSION_ID="INCONNU~XD~"
+SESSION_ID="INCONNU~XD~3RIDnYZB#P4S9w77LBnyQ4tc4N5f4IVzVny_x3NwWmrBotjn_Tn0"
 AUTO_READ_STATUS=true
 STATUS_READ_MSG="*Status Seen By INCONNU-XD ⚡*"
 AUTO_STATUS_REPLY=false
@@ -6,11 +6,11 @@ AUTO_REJECT_CALLS=false
 MODE="public"
 WELCOME=false
 AUTO_READ_MESSAGES=false
-AUTO_TYPING=false
-OWNER_NAME="INCONNU BOY"
-OWNER_NUMBER="554488138425"
-AUTO_RECORDING=false
-ALWAYS_ONLINE=false
+AUTO_TYPING=true
+OWNER_NAME="angel"
+OWNER_NUMBER="50943795842"
+AUTO_RECORDING=true
+ALWAYS_ONLINE=true
 AUTO_BLOCK=true
 AUTO_REACT=false
-PREFIX="."
+PREFIX="🍷"
